Fixed vertical alignment in device

--- a/other/buttons/style.css
+++ b/other/buttons/style.css
@@ -104,14 +104,14 @@ body[role="application"] a[role="button"] span {
 	float: left;
 	width: 2.5rem;
 	height: 2.5rem;
-	margin: 0.5rem 0.5rem 0 -1rem;
+	margin: 0 0.5rem 0 -1rem;
 	background: transparent no-repeat center center;
 }
 
 body[role="application"] button span.end,
 body[role="application"] a[role="button"] span.end {
 	float: right;
-	margin: 0.5rem -1.5rem 0 1rem;
+	margin: 0.3rem -1.5rem 0 1rem;
 }
 
 /* Icon base types */
@@ -167,6 +167,7 @@ body[role="application"] .buttons-list a[role="button"] {
 	border-color: #b6b6b6;
 	text-align: left;
 	font-size: 1.4rem;
+	line-height: 2.9rem;
 	position: relative;
 	overflow: visible;
 }
